Initial commit of svelte-d3-rollup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 
 <body>
-  <h1>Here is my git hub page.</h1>
+  <h1>Joe Klemke git hub page.</h1>
+  
+  <a href="/svelte-d3-rollup/index.html">svelte-d3-rollup</a>
 </body>
 </html>
