--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
   <h1>Joe Klemke git hub page.</h1>
   
-  <a href="/svelte-d3-rollup/index.html">svelte-d3-rollup</a>
+  <a href="/svelte-d3-rollup">svelte-d3-rollup</a>
 </body>
 </html>
