--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-  <h1>Joe Klemke git hub page.</h1>
-  
-  <a href="/svelte-d3-rollup">svelte-d3-rollup</a>
+  <h1>Joe Klemke git hub page.</h1>  
+  <!--a href="/svelte-d3-rollup">svelte-d3-rollup</a-->
 </body>
 </html>
