First step toward assign the domain grox.info to jklemke/github.io

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <h1>Joe Klemke git hub page.</h1>  
+  <h1>I'll try pointing grox.info to this</h1>  
   <!--a href="/svelte-d3-rollup">svelte-d3-rollup</a-->
 </body>
 </html>
