deleted svelte files

--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>jklemke github pages home</title>
+  <title>Model Theory Glossary</title>
 </head>
 
 <body>
-  <h1>I'll try pointing grox.info to this</h1>  
-  <!--a href="/svelte-d3-rollup">svelte-d3-rollup</a-->
+  <h1>Successfully pointed grox.info here</body>h1>  
 </body>
 </html>
