--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-  <h1>Successfully pointed grox.info here</body>h1>  
+  <h1>Successfully pointed grox.info here</h1>  
 </body>
 </html>
