--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Model Theory Glossary</title>
+  <title>grox.info model theory</title>
+  <meta name="description" content="grox.info is an experiment in creating a knowledge graph for model theory vocabulary">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="og:url" content="https://grox.info/">
+  <meta name="og:title" content="grox.info">
+  <meta name="og:type" content="website">
+  <meta name="og:description" content="grox.info is an experiment in creating a knowledge graph for model theory vocabulary">
+  <meta name="og:image" content="https://grox.info/img/Grox3.gif">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <meta name="theme-color" content="#fafafa">  
 </head>
 
 <body>
   <h1>Successfully pointed grox.info here</h1>  
-</body>
+
+  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-210857385-1', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script></body>
+
 </html>
