--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="author" href="humans.txt" />
   <meta name="theme-color" content="#fafafa">  
 </head>
 
 <body>
-  <h1>Successfully pointed grox.info here</h1>  
+  <h1>The basic boilerplate structure has been added</h1>  
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
