created a token test word page

--- a/BT2y5FG6rnmlTkA5DoDZeLWp/index.html
+++ b/BT2y5FG6rnmlTkA5DoDZeLWp/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <h1>this page explains the word 'token'</h1>  
+  <h1>The word is 'token'</h1>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
