good example of parent and child index.html files

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-  <h1>The basic boilerplate structure has been added</h1>
+  <h1>grox.info model theory glossary</h1>
+  <p>grox.info is an experiment in creating a knowledge graph for model theory vocabulary</p>
   <a href="BT2y5FG6rnmlTkA5DoDZeLWp">token</a>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
