--- a/BT2y5FG6rnmlTkA5DoDZeLWp/index.html
+++ b/BT2y5FG6rnmlTkA5DoDZeLWp/index.html
@@ -4,27 +4,27 @@
 <head>
   <meta charset="UTF-8">
   <title>grox.info token</title>
-  <meta name="description" content="grox.info is an experiment in creating a knowledge graph for model theory vocabulary">
+  <meta name="description" content="grox.info vocabulary word token">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="og:url" content="https://grox.info/">
-  <meta name="og:title" content="grox.info">
+  <meta name="og:url" content="https://grox.info/BT2y5FG6rnmlTkA5DoDZeLWp">
+  <meta name="og:title" content="token">
   <meta name="og:type" content="website">
-  <meta name="og:description" content="grox.info is an experiment in creating a knowledge graph for model theory vocabulary">
+  <meta name="og:description" content="grox.info vocabulary word token">
   <meta name="og:image" content="https://grox.info/img/Grox3.gif">
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="author" href="humans.txt" />
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
+  <link rel="author" href="../humans.txt" />
   <meta name="theme-color" content="#fafafa">  
 </head>
 
 <body>
   <h1>The word is 'token'</h1>
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
     ga('create', 'UA-210857385-1', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
