minor html id changes for SKOS

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Palanquin Dark">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Otomanopee One">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source Code Pro">
-  <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/go-mono" type="text/css"/>
+  <link rel="stylesheet" href="https://fontlibrary.org//face/go-mono" media="screen" type="text/css"/>
   <link rel="author" href="humans.txt" />
   <meta name="theme-color" content="#fafafa">  
 </head>
@@ -33,20 +33,28 @@
 			</ul>
 		</nav>
   </header>
-	<div class="main-wrapper">
     <main>
       <p>grox.info is an experiment in creating a knowledge graph for the vocabulary of model theory, first order logic, semantic web and similar attempts to formalize semantics.</p>
+      <p>&#x10901;</p>
+      <p>&#67841;</p>
+      <p>&#x10908;</p>
+      <p>&#67848;</p>
       <section>
         <header>
           <h1>Model Theory Vocabulary</h1>
         </header>
         <dl>
-          <dt><a href="BT2y5FG6rnmlTkA5DoDZeLWp">token</a></dt><dd>a word, a phoneme, a sequence of characters</dd>
+          <dt><a href="0.0.0-a.1/BT2y5FG6rnmlTkA5DoDZeLWp/">token</a></dt><dd>a word, a phoneme, a sequence of characters</dd>
           <dt><a href="table-examples.html">tables</a></dt><dd>Examples of HTML tables as data structures</dd>
         </dl>      
       </section>
+      <section>
+        <header>
+          <h1>SKOS Concept Scheme</h1>
+          <p>let's talk about SKOS</p>
+        </header>
+      </section>
     </main>
-  </div>
   <aside>		
 		<header>
 			<h1>Aside</h1>
