added skos id tags

--- a/0.0.0-a.1/BT2y5FG6rnmlTkA5DoDZeLWp/en/index.html
+++ b/0.0.0-a.1/BT2y5FG6rnmlTkA5DoDZeLWp/en/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>grox.info token</title>
-  <meta name="description" content="grox.info vocabulary word token">
+  <meta name="description" content="grox.info vocabulary word: token">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="og:url" content="https://grox.info/BT2y5FG6rnmlTkA5DoDZeLWp">
-  <meta name="og:title" content="token">
+  <meta name="og:title" content="grox.info token">
   <meta name="og:type" content="website">
-  <meta name="og:description" content="grox.info vocabulary word token">
+  <meta name="og:description" content="grox.info vocabulary word: token">
   <meta name="og:image" content="https://grox.info/img/Grox3.gif">
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
@@ -21,7 +21,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source Code Pro">
   <link rel="stylesheet" href="https://fontlibrary.org//face/go-mono" media="screen" type="text/css"/>
   <link rel="author" href="../../../humans.txt" />
-  <meta name="theme-color" content="#fafafa">  
 </head>
 <body>
   <header>
@@ -34,37 +33,26 @@
 		</nav>
   </header>
     <main>
-      <p>grox.info is an experiment in creating a knowledge graph for model theory vocabulary</p>
-      <article>
-        <h1>Token</h1>
-        <p>A word, a phoneme, an interpretable sequence of characters. It can be selected, chosen for interpretation. It has token identity. A = A.</p>
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th>groxid</th>
-              <th>prefLabel</th>
-              <th>Description</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>BT2y5FG6rnmlTkA5DoDZeLWp</td>
-              <td>token</td>
-              <td>A word, a phoneme, an interpretable sequence of characters. It can be selected, chosen for interpretation. It has token identity. A = A.</td>
-            </tr>
-          </tbody>
-        </table>
+      <article id="note">
+        <header>
+          <p><small>vocabulary word:  </small><span  id="prefLabel">token</span></p>
+        </header>      
+        <h1>Definition</h1>
+        <p id="definition">A word, a phoneme, an interpretable sequence of characters. It can be selected, chosen for interpretation. It has token identity. A = A.</p>
+        <h1>Explanation</h1>
+        <p id="editorialNote">editorial note</p>
+        <h1>Example</h1>
+        <p id="example">example</p>
+        <h1>History</h1>
+        <p id="historyNote">history</p>
+        <h1>Scope</h1>
+        <p id="scopeNote">scope, citations</p>
       </article>
     </main>
   <aside>		
 		<header>
 			<h1>Aside</h1>
-			<nav>
-				<ul class="navlist">
-					<li><a href="#">Link1</a></li>
-					<li><a href="#">Link2</a></li>
-				</ul>
-			</nav>
+      <p>grox.info is an experiment in creating a knowledge graph for logical vocabulary</p>
 		</header>
 		<ul class="asidelist">
 			<li>Aside item</li>
