--- a/0.0.0-a.1/BT2y5FG6rnmlTkA5DoDZeLWp/en/index.html
+++ b/0.0.0-a.1/BT2y5FG6rnmlTkA5DoDZeLWp/en/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
   <meta charset="UTF-8">
@@ -36,6 +36,7 @@
       <article id="note">
         <header>
           <p><small>vocabulary word:  </small><span  id="prefLabel">token</span></p>
+          <p><small>related:  </small>phoneme, lexeme, word</p>
         </header>      
         <h1>Definition</h1>
         <p id="definition">A word, a phoneme, an interpretable sequence of characters. It can be selected, chosen for interpretation. It has token identity. A = A.</p>
